fix: container overflow-x

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
     overflow-y: auto;
+    overflow-x: hidden
 }
 
 h1 {
